--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/react": "^11.2.3",
 		"@testing-library/user-event": "^12.6.0",
 		"autoprefixer": "^9.8.6",
+		"formik": "^2.2.6",
 		"graphql": "^15.4.0",
 		"postcss": "^7.0.35",
 		"react": "^17.0.1",
