--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"autoprefixer": "^9.8.6",
 		"formik": "^2.2.6",
 		"graphql": "^15.4.0",
+		"lodash": "^4.17.20",
 		"postcss": "^7.0.35",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
