--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"postcss": "^7.0.35",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-perfect-scrollbar": "^1.5.8",
 		"react-redux": "^7.2.2",
 		"react-scripts": "4.0.1",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
